--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
 		</p>
 	</div>
 
-	<div id="contact-region" class="container"></div>
-
-	<script type="text/template" id="static-template">
-		<p>This is text that was rendered by our Marionette app. </p>
-	</script>
-
+	<div id="contact-region" class="container">
+		<p>This should be replaced by the contact controller </p>
+	</div>
 
 	<script type="text/template" id="different-static-template">
 		<p>Text from a static template</p>
@@ -34,12 +31,9 @@
 
 
 	<script type="text/template" id="contact-list-item">
-		<%= lastName %>, <%= firstName %> - <%= phoneNumber %>
-	</script>
-
-
-	<script type="text/template" id="contact-template">
-		<p><%= lastName %>, <%= firstName %> </p>
+		<td><%= lastName %></td>
+		<td><%= firstName %></td>
+		<td><%= phoneNumber %></td>
 	</script>
 
 	<!-- Vendor Scripts -->
