adding table row headers, changing view to composite view

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
 		<p>Text from a static template</p>
 	</script>
 
+	<script type="text/template" id="contact-list">
+		<thead>
+			<tr>
+				<td>Last Name</td>
+				<td>First Name</td>
+				<td>Phone Number </td>
+			</tr>
+		</thead>
+		<tbody>
+		</tbody>
+	</script>
 
 	<script type="text/template" id="contact-list-item">
 		<td><%= lastName %></td>
