adding remove feature plus fade out

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 				<td>Last Name</td>
 				<td>First Name</td>
 				<td>Phone Number </td>
+				<td> </td>
 			</tr>
 		</thead>
 		<tbody>
@@ -45,6 +46,12 @@
 		<td><%= lastName %></td>
 		<td><%= firstName %></td>
 		<td><%= phoneNumber %></td>
+		<td>
+			<button class="btn btn-small js-delete">
+				<i class="icon-remove"></i>
+				Delete
+			</button>
+		</td>
 	</script>
 
 	<!-- Vendor Scripts -->
