--- a/index.html
+++ b/index.html
@@ -47,11 +47,20 @@
 		<td><%= firstName %></td>
 		<td><%= phoneNumber %></td>
 		<td>
+			<a href="#" class="btn btn-small js-show">
+				<i class="icon-eye-open"></i>
+				Show
+			</a>
 			<button class="btn btn-small js-delete">
 				<i class="icon-remove"></i>
 				Delete
 			</button>
 		</td>
+	</script>
+
+	<script type="text/template" id="contact-view">
+		<h1><%= firstName %> <%= lastName %><h1>
+		<p><strong>Phone number:</strong> <%= phoneNumber %></p>
 	</script>
 
 	<!-- Vendor Scripts -->
