--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	</script>
 
 	<script type="text/template" id="contact-view">
-		<h1><%= firstName %> <%= lastName %><h1>
+		<h1><%= firstName %> <%= lastName %></h1>
 		<p><strong>Phone number:</strong> <%= phoneNumber %></p>
 	</script>
 
@@ -75,6 +75,9 @@
 	<script src="./assets/js/entities/contact.js"></script>
 	<script src="./assets/js/apps/contacts/list/list_view.js"></script>
 	<script src="./assets/js/apps/contacts/list/list_controller.js"></script>
+
+	<script src="./assets/js/apps/contacts/show/show_view.js"></script>
+	<script src="./assets/js/apps/contacts/show/show_controller.js"></script>
 
 	<script type="text/javascript">
 
