--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<td><%= firstName %></td>
 		<td><%= phoneNumber %></td>
 		<td>
-			<a href="#" class="btn btn-small js-show">
+			<a href="#contacts/<%= id %>" class="btn btn-small js-show">
 				<i class="icon-eye-open"></i>
 				Show
 			</a>
