Adding back button, triggers contact:list event

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 	<script type="text/template" id="contact-view">
 		<h1><%= firstName %> <%= lastName %></h1>
 		<p><strong>Phone number:</strong> <%= phoneNumber %></p>
+		<a href="#contacts" class="btn btn-small js-close">
+			<i class="icon-eye-close"></i>
+			Close
+		</a>
 	</script>
 
 	<!-- Vendor Scripts -->
