Adding logic to support unknown contact id

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 		</a>
 	</script>
 
+	<script type="text/template" id="missing-contact-view">
+		<div class="alert alter-error">This contact does not exist! </div>
+	</script>
+
 	<!-- Vendor Scripts -->
 	<script src="./assets/js/vendor/jquery-1.10.2.js"></script>
 	<script src="./assets/js/vendor/json2.js"></script>
