Adding local storage to application

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	</script>
 
 	<script type="text/template" id="missing-contact-view">
-		<div class="alert alter-error">This contact does not exist! </div>
+		<div class="alert alert-error">This contact does not exist! </div>
 	</script>
 
 	<!-- Vendor Scripts -->
@@ -76,10 +76,13 @@
 	<script src="./assets/js/vendor/json2.js"></script>
 	<script src="./assets/js/vendor/underscore.js"></script>
 	<script src="./assets/js/vendor/backbone.js"></script>
+	<script src="./assets/js/vendor/backbone.localstorage.js"></script>
 	<script src="./assets/js/vendor/backbone.marionette.js"></script>
+
 
 	<!-- Custom JS -->
 	<script src="./assets/js/app.js"></script>
+	<script src="./assets/js/apps/config/storage/localstorage.js"></script>
 	<script src="./assets/js/entities/contact.js"></script>
 
 	<script src="./assets/js/apps/contacts/contacts_app.js"></script>
