adding vender assets and spin template

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 		<p>This should be replaced by the contact controller </p>
 	</div>
 
+	<script type="text/template" id="loading-view">
+		<h1>Loading Delay</h1>
+		<p>yep... loading data...</p>
+		<div id="spinner"></div>
+	</script>
+
 	<script type="text/template" id="different-static-template">
 		<p>Text from a static template</p>
 	</script>
@@ -78,7 +84,8 @@
 	<script src="./assets/js/vendor/backbone.js"></script>
 	<script src="./assets/js/vendor/backbone.localstorage.js"></script>
 	<script src="./assets/js/vendor/backbone.marionette.js"></script>
-
+	<script src="./assets/js/vendor/spin.js"></script>
+	<script src="./assets/js/vendor/spin.jquery.js"></script>
 
 	<!-- Custom JS -->
 	<script src="./assets/js/app.js"></script>
