Adding loading feature for delayed fetching

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 	<script src="./assets/js/app.js"></script>
 	<script src="./assets/js/apps/config/storage/localstorage.js"></script>
 	<script src="./assets/js/entities/contact.js"></script>
+	<script src="./assets/js/common/views.js"></script>
 
 	<script src="./assets/js/apps/contacts/contacts_app.js"></script>
 
