Adding title and message properties to loading template

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 	</div>
 
 	<script type="text/template" id="loading-view">
-		<h1>Loading Delay</h1>
-		<p>yep... loading data...</p>
+		<h1><%= title %></h1>
+		<p><%= message %></p>
 		<div id="spinner"></div>
 	</script>
 
