Adding form template for editing contacts

--- a/index.html
+++ b/index.html
@@ -77,6 +77,25 @@
 		<div class="alert alert-error">This contact does not exist! </div>
 	</script>
 
+	<script type="text/template" id="contact-form">
+		<h1>Edit <%= firstName %> <%= lastName %></h1>
+		<form>
+			<div class="control-group">
+				<label for="contact-firstName" class="control-lable">First Name:</label>
+				<input id="contact-firstName" name="firstName" type="text" value="<%= firstName %>" />
+			</div>
+			<div class="control-group">
+				<label for="contact-lastName" class="control-lable">Last Name:</label>
+				<input id="contact-lastName" name="lastName" type="text" value="<%= lastName %>" />
+			</div>
+			<div class="control-group">
+				<label for="contact-phoneNumber" class="control-lable">Phone Number:</label>
+				<input id="contact-phoneNumber" name="phoneNumber" type="text" value="<%= phoneNumber %>" />
+			</div>
+			<button class="btn js-submit">Save</button>
+		</form>
+	</script>
+
 	<!-- Vendor Scripts -->
 	<script src="./assets/js/vendor/jquery-1.10.2.js"></script>
 	<script src="./assets/js/vendor/json2.js"></script>
