--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
 	<script src="./assets/js/apps/contacts/show/show_view.js"></script>
 	<script src="./assets/js/apps/contacts/show/show_controller.js"></script>
 
+	<script src="./assets/js/apps/contacts/edit/edit_view.js"></script>
+	<script src="./assets/js/apps/contacts/edit/edit_controller.js"></script>
+
 	<script type="text/javascript">
 
 		ContactManager.start();
