Fixing bug with fetching contacts, adding link to edit form

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 			<i class="icon-eye-close"></i>
 			Close
 		</a>
+		<a href="#contacts/<%= id %>/edit" class="btn btn-small js-edit">
+			<i class="icon-pencil"></i>
+			Edit
+		</a>
 	</script>
 
 	<script type="text/template" id="missing-contact-view">
