--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 	<script src="./assets/js/vendor/underscore.js"></script>
 	<script src="./assets/js/vendor/backbone.js"></script>
 	<script src="./assets/js/vendor/backbone.localstorage.js"></script>
+	<script src="./assets/js/vendor/backbone.syphon.js"></script>
 	<script src="./assets/js/vendor/backbone.marionette.js"></script>
 	<script src="./assets/js/vendor/spin.js"></script>
 	<script src="./assets/js/vendor/spin.jquery.js"></script>
