--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Marionette Contact Manager</title>
 	<link href="./assets/css/bootstrap.css" rel="stylesheet">
 	<link href="./assets/css/application.css" rel="stylesheet">
+	<link href="./assets/css/jquery-ui-1.10.0.css" rel="stylesheet">
 </head>
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
@@ -57,6 +58,10 @@
 				<i class="icon-eye-open"></i>
 				Show
 			</a>
+			<a href="#contacts/<%= id %>/edit" class="btn btn-small js-edit">
+				<i class="icon-pencil"></i>
+				Edit
+			</a>
 			<button class="btn btn-small js-delete">
 				<i class="icon-remove"></i>
 				Delete
@@ -70,10 +75,6 @@
 		<a href="#contacts" class="btn btn-small js-close">
 			<i class="icon-eye-close"></i>
 			Close
-		</a>
-		<a href="#contacts/<%= id %>/edit" class="btn btn-small js-edit">
-			<i class="icon-pencil"></i>
-			Edit
 		</a>
 	</script>
 
@@ -102,6 +103,7 @@
 
 	<!-- Vendor Scripts -->
 	<script src="./assets/js/vendor/jquery-1.10.2.js"></script>
+	<script src="./assets/js/vendor/jquery-ui-1.10.4.js"></script>
 	<script src="./assets/js/vendor/json2.js"></script>
 	<script src="./assets/js/vendor/underscore.js"></script>
 	<script src="./assets/js/vendor/backbone.js"></script>
