Adding new images, adding modal window

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 		<p>This should be replaced by the contact controller </p>
 	</div>
 
+	<div id="dialog-region"></div>
+
 	<script type="text/template" id="loading-view">
 		<h1><%= title %></h1>
 		<p><%= message %></p>
@@ -100,6 +102,8 @@
 			<button class="btn js-submit">Save</button>
 		</form>
 	</script>
+
+
 
 	<!-- Vendor Scripts -->
 	<script src="./assets/js/vendor/jquery-1.10.2.js"></script>
