Remove title unless standload page

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
 			<i class="icon-eye-close"></i>
 			Close
 		</a>
+		<a href="#contacts/<%= id %>/edit" class="btn btn-small js-edit">
+			<i class="icon-pencil"></i>
+			Edit
+		</a>
+
 	</script>
 
 	<script type="text/template" id="missing-contact-view">
@@ -85,7 +90,6 @@
 	</script>
 
 	<script type="text/template" id="contact-form">
-		<h1>Edit <%= firstName %> <%= lastName %></h1>
 		<form>
 			<div class="control-group">
 				<label for="contact-firstName" class="control-lable">First Name:</label>
