Adding layouts for panel and contact lists updated list controller for better region management

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
 
 	<div id="dialog-region"></div>
 
+
+	<script type="text/template" id="contact-list-layout">
+		<div id="panel-region"></div>
+		<div id="contacts-region"></div>
+	</script>
+
+	<script type="text/template" id="contact-list-panel">
+		<button class="btn btn-primary js-new" >New Contact</button>
+	</script>
+
+
 	<script type="text/template" id="loading-view">
 		<h1><%= title %></h1>
 		<p><%= message %></p>
