making common view, probably broken right now

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 	<script src="./assets/js/common/views.js"></script>
 
 	<script src="./assets/js/apps/contacts/contacts_app.js"></script>
+	<script src="./assets/js/apps/contacts/common/views.js"></script>
 
 	<script src="./assets/js/apps/contacts/list/list_view.js"></script>
 	<script src="./assets/js/apps/contacts/list/list_controller.js"></script>
