--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
 	<script src="./assets/js/apps/contacts/edit/edit_view.js"></script>
 	<script src="./assets/js/apps/contacts/edit/edit_controller.js"></script>
 
+	<script src="./assets/js/apps/contacts/new/new_view.js"></script>
+
 	<script type="text/javascript">
 
 		ContactManager.start();
