--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
 	<script src="./assets/js/vendor/spin.js"></script>
 	<script src="./assets/js/vendor/spin.jquery.js"></script>
 
+	<!-- Marionette Plugins -->
+	<script src="./assets/js/apps/config/marionette/regions/dialog.js"></script>
+
 	<!-- Custom JS -->
 	<script src="./assets/js/app.js"></script>
 	<script src="./assets/js/apps/config/storage/localstorage.js"></script>
