--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 
 	<script type="text/template" id="contact-list-panel">
 		<button class="btn btn-primary js-new" >New Contact</button>
+		<form id="filter-form" class="form-search form-inline pull-right">
+			<div class="input-append">
+				<input type="text" class="span2 search-query js-filter-criterion" />
+				<button type="submit" class="btn">Filter Contacts</button>
+			</div>
+		</form>
 	</script>
 
 
