Adding filter function

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 	<!-- Custom JS -->
 	<script src="./assets/js/app.js"></script>
 	<script src="./assets/js/apps/config/storage/localstorage.js"></script>
+	<script src="./assets/js/entities/common.js"></script>
 	<script src="./assets/js/entities/contact.js"></script>
 	<script src="./assets/js/common/views.js"></script>
 
