Adding no contacts view for searching for no contacts

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
 		</td>
 	</script>
 
+	<script type="text/template" id="contact-list-none">
+		<td colspan="4">Not Contacts Found... (sad face)</td>
+	</script>
+
 	<script type="text/template" id="contact-view">
 		<h1><%= firstName %> <%= lastName %></h1>
 		<p><strong>Phone number:</strong> <%= phoneNumber %></p>
