--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
 	</script>
 
 
+	<!-- About Templates -->
+	<script type="text/template" id="about-message">
+		<h1>About this Application</h1>
+		<p>
+			Some text...
+		</p>
+	</script>
+
 
 	<!-- Vendor Scripts -->
 	<script src="./assets/js/vendor/jquery-1.10.2.js"></script>
@@ -145,13 +153,19 @@
 	<!-- Marionette Plugins -->
 	<script src="./assets/js/apps/config/marionette/regions/dialog.js"></script>
 
-	<!-- Custom JS -->
+	<!-- Application JS -->
 	<script src="./assets/js/app.js"></script>
 	<script src="./assets/js/apps/config/storage/localstorage.js"></script>
 	<script src="./assets/js/entities/common.js"></script>
 	<script src="./assets/js/entities/contact.js"></script>
 	<script src="./assets/js/common/views.js"></script>
 
+	<!-- AboutApp -->
+	<script src="./assets/js/apps/about/about_app.js"></script>
+	<script src="./assets/js/apps/about/show/show_view.js"></script>
+	<script src="./assets/js/apps/about/show/show_controller.js"></script>
+
+	<!-- ContactApp -->
 	<script src="./assets/js/apps/contacts/contacts_app.js"></script>
 	<script src="./assets/js/apps/contacts/common/views.js"></script>
 
