Adding event to handle opening about page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 				<button type="submit" class="btn">Filter Contacts</button>
 			</div>
 		</form>
+		<a href="#about" class="btn btn-small js-about">
+			<i class="icon-pencil"></i>
+			About
+		</a>
 	</script>
 
 
