--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
 </head>
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container">
-				<span class="brand">Contact manager</span>
-			</div>
-		</div>
 	</div>
 	<div id="main-region" class="container">
 		<p>
@@ -28,6 +23,20 @@
 
 	<div id="dialog-region"></div>
 
+	<script type="text/template" id="header-template">
+		<div class="navbar-inner">
+			<div class="container">
+				<a class="brand" href="#contacts">Contact manager</a>
+				<div class="nav-collapse collapse">
+					<ul class="nav"></ul>
+				</div>
+			</div>
+		</div>
+	</script>
+
+	<script type="text/template" id="header-link">
+		<a href="#<%= url %>"><%= name %></a>
+	</script>
 
 	<script type="text/template" id="contact-list-layout">
 		<div id="panel-region"></div>
@@ -149,6 +158,7 @@
 	<script src="./assets/js/vendor/underscore.js"></script>
 	<script src="./assets/js/vendor/backbone.js"></script>
 	<script src="./assets/js/vendor/backbone.localstorage.js"></script>
+	<script src="./assets/js/vendor/backbone.picky.js"></script>
 	<script src="./assets/js/vendor/backbone.syphon.js"></script>
 	<script src="./assets/js/vendor/backbone.marionette.js"></script>
 	<script src="./assets/js/vendor/spin.js"></script>
@@ -161,6 +171,7 @@
 	<script src="./assets/js/app.js"></script>
 	<script src="./assets/js/apps/config/storage/localstorage.js"></script>
 	<script src="./assets/js/entities/common.js"></script>
+	<script src="./assets/js/entities/header.js"></script>
 	<script src="./assets/js/entities/contact.js"></script>
 	<script src="./assets/js/common/views.js"></script>
 
