Adding header region

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 	<link href="./assets/css/jquery-ui-1.10.0.css" rel="stylesheet">
 </head>
 <body>
-	<div class="navbar navbar-inverse navbar-fixed-top">
-	</div>
+	<!-- Header Region -->
+	<div id="header-region"></div>
+
+
 	<div id="main-region" class="container">
 		<p>
 			Here is static content in the web page.
