Adding new headerApp to index, updating list view

--- a/index.html
+++ b/index.html
@@ -177,6 +177,12 @@
 	<script src="./assets/js/entities/contact.js"></script>
 	<script src="./assets/js/common/views.js"></script>
 
+	<!-- HeaderApp -->
+	<script src="./assets/js/apps/header/header_app.js"></script>
+	<script src="./assets/js/apps/header/list/list_view.js"></script>
+	<script src="./assets/js/apps/header/list/list_controller.js"></script>
+
+
 	<!-- AboutApp -->
 	<script src="./assets/js/apps/about/about_app.js"></script>
 	<script src="./assets/js/apps/about/show/show_view.js"></script>
